--- a/knative/picalc.yaml
+++ b/knative/picalc.yaml
@@ -1,12 +1,36 @@
-apiVersion: serving.knative.dev/v1alpha1
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: picalc
+  labels:
+    app: picalc
+spec:
+  selector:
+    matchLabels:
+      app: picalc
+  template:
+    metadata:
+      labels:
+        app: picalc
+    spec:
+      containers:
+      - name: picalc
+        image: __IMAGE__
+        ports:
+        - name: http-server
+          containerPort: 8080
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: picalc
-  namespace: default
+  labels:
+    app: picalc
 spec:
-  runLatest:
-    configuration:
-      revisionTemplate:
-        spec:
-          container:
-            image: __IMAGE__
+  ports:
+  - port: 8080
+    targetPort: http-server
+  selector:
+    app: picalc
+  type: NodePort
+
