--- a/tekton/run/picalc-pipeline-run.yaml
+++ b/tekton/run/picalc-pipeline-run.yaml
@@ -13,7 +13,7 @@ spec:
     - name: pathToYamlFile
       value: "knative/picalc.yaml"
     - name: imageUrl
-      value: <REGISTRY>/<NAMESPACE>/picalc
+      value: registry.container-registry.svc.cluster.local:5000/shapeblock/picalc
     - name: imageTag
       value: "1.0"
   serviceAccountName: pipeline-account
